--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,7 +86,7 @@ h4 {
     .container-sm,
     .container-md,
     .container-lg {
-      max-width: 900px;
+      max-width: 850px;
     }
   }
 
@@ -97,7 +97,7 @@ h4 {
     .container-md,
     .container-lg,
     .container-xl {
-      max-width: 1000px;
+      max-width: 900px;
     }
   }
 
@@ -143,4 +143,13 @@ h4 {
  /* swiper */
 .swiper {
   margin: 0  !important;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: var(--second-color);
+  height: 100px;
+}
+::-webkit-scrollbar{
+  background-image: linear-gradient(40deg,#5810FF,transparent);
+  width: 15px;
 }
